deployment/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hellokube
  labels:
    name: hellokube
