deployment/deployment-canary.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: deployment-canary-hello-kube
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: app-hello-kube
        env: canary
    spec:
      containers:
        - name: container-hello-kube
          image: schnieds/hello-kube:canary
          ports:
           - containerPort: 80
