deployment/deployment-stable.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: deployment-stable-hello-kube
spec:
  replicas: 8
  template:
    metadata:
      labels:
        app: app-hello-kube
        env: stable
    spec:
      containers:
        - name: container-hello-kube
          image: schnieds/hello-kube:stable
          ports:
           - containerPort: 80
