deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-hello-kube
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 80
  selector:
    app: app-hello-kube
  type: LoadBalancer
